--- a/style.css
+++ b/style.css
@@ -53,3 +53,11 @@ body{
 	background-color: #2FBE70;
 	border: none;
 }
+#new-page{
+	display: none;
+	text-align: center;
+	border: 5px solid gray;
+	margin: 20% 40%;
+	border-radius: 10px;
+	
+}
